# SpaceRecycle

./: .gitignore  CMakeLists.txt  README.md
include/: Game.h  Player.h  Star.h  Trash.h
include/Utils/: Defines.h  Globals.h  Random.h  Timer.h
src/: Game.cpp  Player.cpp  Trash.cpp  main.cpp
